add "can_execute" options, to be able to block the execution of new process (to use when a delivery is in progress)

--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -102,6 +102,7 @@ spipu:
             start:   "Start refresh"
 
         error:
+            execute:  "Execution is disabled in module configuration"
             rerun:    "This task can not be rerun in this status"
             kill:     "This task can not be killed in this status"
             disable:  "This action has been disabled in the app configuration"
