add new option "needed_role" on process definition + update unit tests

--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -111,6 +111,7 @@ spipu:
             required: "This field is required"
             generic:  "There is an error on this form"
             locked:   "This process can not be executed, because it is locked by another one"
+            needed_role: "This process can not be executed, because you have not the good role"
         help:
             json:     "Must be a valid Json format"
 
