add the real memory usage

--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -70,6 +70,7 @@ spipu:
                 level:                    "Date"
                 memory:                   "Mem"
                 memory_peak:              "Peak"
+                memory_real:              "Real"
                 duration:                 "Duration"
                 message:                  "Message"
 
