add memory graph on process task log

--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -18,6 +18,7 @@ spipu:
                 log:
                     list:     "Process Logs"
                     show:     "Show Process Log #%id"
+                    memory_graph: "Memory Usage Graph"
 
         fieldset:
             task:        "Task"
